# Trace2Tower

./: .gitignore  EXTERNAL_REQUIREMENTS.md  README.md  Trace2Tower - 原始资料（Obsidian阅读版）.md  pyproject.toml
configs/: alfworld_text_only.json  baseline_flat_skill_webshop.json  baseline_no_skill_alfworld.json  baseline_no_skill_webshop.json  baseline_raw_trajectory_webshop.json  baseline_skilllens_webshop.json  baseline_skillx_webshop.json  llm_no_skill_webshop.json  llm_skillx_webshop.json  llm_trace2tower_alfworld.json  llm_trace2tower_webshop.json  trace2tower_alfworld.json  trace2tower_webshop.json  webshop_small.json
configs/alfworld/: base_config.yaml
docs/: WSL_NATIVE_AI_QUICKSTART.md
docs/ai_assist/: 02_algorithm_contract.md  03_real_env_setup.md  04_add_algorithm.md  05_experiment_skeleton_handoff.md  06_research_experiment_brief_for_ai.md  07_metrics_story_map.md  08_core_code_map.md  09_llm_integration_status.md  README.md
scripts/: analyze_experiment_table.py  collect_results.py  deploy_skill_models.py  evaluate_selectors.py  mine_skill_models.py  plot_experiment_figures.py  refine_skill_tower.py  run_config_matrix.py  run_experiment_suite.py
src/trace2tower/: __init__.py  __main__.py  agent_factory.py  config.py  embedding.py  env.py  env_factory.py  execution.py  io.py  llm.py  registry.py  run.py  schemas.py  text.py
src/trace2tower/agents/: __init__.py  base.py  llm_action_agent.py  random_agent.py
src/trace2tower/core/: __init__.py  models.py
src/trace2tower/envs/: __init__.py  alfworld_adapter.py  base.py  dummy.py  webshop_adapter.py
(+35 files in other folders)
